<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MobileTravelJournal</string>

    <string name="home">Home</string>
    <string name="routes">Routes</string>
    <string name="profile">Profile</string>

    <string name="test_blank_fragment">This is a blank fragment</string>
    <string name="login_title">Login Title</string>
    <string name="login_email">Login Email</string>
    <string name="login_pw">Login Password</string>
    <string name="login_logintext">Log In Text</string>
    <string name="login_image">Map</string>
    <string name="login_textseperator">Or</string>
    <string name="login_forgot"><u>Forgot Password?</u></string>
    <string name="login_noaccount_q">No account?</string>
    <string name="login_noaccount_signup">Sign Up</string>
    <string name="login_forgot_title">Forgot your password?</string>
    <string name="login_forgot_image">Email Image</string>
    <string name="login_forgot_info">No problem, type in your email here to reset it. Please check your email afterwards.</string>
    <string name="login_forgot_back">Click here to go back to the login screen</string>
    <string name="login_forgot_send">Send Reset Email</string>
    <string name="login_forgot_emailtext">Email</string>
    <string name="login_password_backarrow">Go Back</string>
    <string name="login_signup_title">Welcome</string>
    <string name="login_signup_image">Image</string>
    <string name="login_signup_username">Username</string>
    <string name="login_signup_email">Email</string>
    <string name="login_signup_password">Password</string>
    <string name="login_signup_repeat_password">Enter password again</string>
    <string name="login_signup_sign_up">Sign Up</string>
    <string name="login_signup_account_q">Already have an account?</string>
    <string name="login_signup_account_log_in"><u>Log in</u></string>
    <string name="login_signup_back">Go Back to Login</string>
    <string name="login_signup_back_arrow">Back</string>
    <string name="profile_signout">Sign out here</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile_notifications">Notifications</string>
    <string name="profile_edit">Edit</string>
    <string name="profile_image">User Image</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_username">Username</string>
    <string name="profile_desc">About you</string>
    <string name="profile_location">Location</string>
    <string name="profile_contact">Contacts</string>
    <string name="profile_routes">Routes</string>
    <string name="profile_myemail">My Email Address</string>
    <string name="profile_friends">Friends</string>
    <string name="profile_see_all_prefs"><u>+ See all of your preferences</u></string>
    <string name="profile_see_less_prefs"><u>- See less of your preferences</u></string>
    <string name="profile_settings_settings">Settings</string>
    <string name="profile_settings_personal">Personal</string>
    <string name="profile_settings_personal_picture_title">Picture</string>
    <string name="profile_settings_personal_picture_desc">Click on the photo to change your profile picture</string>
    <string name="profile_settings_personal_bio_title">Bio</string>
    <string name="profile_settings_personal_bio_desc">Write a short description about yourself</string>
    <string name="profile_settings_personal_location_title">Location</string>
    <string name="profile_settings_personal_location_desc">Set your current location or click the button</string>
    <string name="profile_settings_personal_location_find_me">Find me</string>
    <string name="profile_settings_personal_preferences_title">Preferences</string>
    <string name="profile_settings_personal_preferences_desc">Choose some topics you are interested in</string>
    <string name="profile_settings_personal_username_title">Username</string>
    <string name="profile_settings_personal_username_desc">Change your username</string>
    <string name="profile_settings_personal_save">Save all changes</string>
    <string name="profile_settings_account_username_title">Username</string>
    <string name="profile_settings_account_username_desc">Change your username</string>
    <string name="profile_settings_privacy">Privacy</string>
    <string name="message_user_not_available">Error: Current user is not available, try again later</string>
    <string name="dialog_button_cancel" tools:ignore="ButtonCase">Cancel</string>
    <string name="profile_settings_privacy_email_title">Email</string>
    <string name="profile_settings_privacy_email_desc">Who can see your email?</string>
    <string name="profile_settings_privacy_location_title">Location</string>
    <string name="profile_settings_privacy_location_desc">Who can see your location?</string>
    <string name="profile_settings_privacy_preferences_title">Preferences</string>
    <string name="profile_settings_privacy_preferences_desc">Who can see your preferences?</string>
    <string name="profile_settings_privacy_save">Save privacy changes</string>
    <string name="profile_settings_about">About</string>
    <string name="profile_settings_about_creator_title">Creator</string>
    <string name="profile_settings_about_creator_desc">Rahul Patel</string>
    <string name="profile_settings_about_version_title">Version</string>
    <string name="profile_settings_about_version_desc">0.01</string>
    <string name="profile_settings_account_username">User name</string>
    <string name="profile_settings_account">Account</string>
    <string name="profile_settings_account_email_title">Email</string>
    <string name="profile_settings_account_email_desc">Change your email address and confirm</string>
    <string name="profile_settings_account_email_new_email">New Email</string>
    <string name="profile_settings_account_email_confirm_email">Confirm new email</string>
    <string name="profile_settings_account_email_change">Change</string>
    <string name="profile_settings_account_password_title">Password</string>
    <string name="profile_settings_account_password_desc">Change your password and confirm</string>
    <string name="profile_settings_account_password_current_password">Current Password</string>
    <string name="profile_settings_account_password_new_password">New Password</string>
    <string name="profile_settings_account_password_confirm_password">Confirm new password</string>
    <string name="profile_settings_account_password_change">Change</string>
    <string name="friend_list_no_result">No friends found</string>
    <string name="dialog_remove_friend_desc">Are you sure you want to remove your friend?</string>
    <string name="notif_yes">Yes</string>
    <string name="notif_no">No</string>
    <string name="home_title">Hello</string>
    <string name="home_camp">camp</string>
    <string name="dialog_remove_friend_title">Remove from friends</string>
    <string name="message_remove_friend_success">Friend has been removed</string>
    <string name="message_failed_remove_friend">Could not remove friend</string>
    <string name="home_explore_item_travel_image">Travel Image</string>
    <string name="home_explore_title">Explore</string>
    <string name="notif_remove">Remove</string>
    <string name="route_submit_picture_desc">Click on the photo to change the picture for your route</string>
    <string name="notif_request_message">sent a friend request</string>
    <string name="notif_new_route">started a new route</string>
    <string name="route_start_title">Start Route</string>
    <string name="route_start_button_text">Start Tracking</string>
    <string name="dialog_button_update_account_title">Welcome to the Mobile Travel Journal App</string>
    <string name="dialog_button_update_account_desc">Time to start travelling\nOh, it looks like that your account is not complete \nDo you want to update it?</string>
    <string name="message_remove_notif_success">Removing notification success!</string>
    <string name="message_friends_success">You\'re now friends with </string>
    <string name="message_error_localize">Error: Problem with locating, please try again later</string>
    <string name="message_error_user_identity">Error: User identity error, please try again later</string>
    <string name="message_error_failed_add_notification">Error: Sending notification failed, please try again later</string>
    <string name="message_error_friend_notification_exists">Error: Your request is already waiting for a response</string>
    <string name="message_error_failed_remove_notification">Error: Removing notification failed, please try again later</string>
    <string name="message_error_failed_add_friends">"Error: Accepting friends request, please try again later"</string>
    <string name="route_submit_title_text">Title</string>
    <string name="route_submit_title_desc">Write a title for your route</string>
    <string name="route_submit_desc_text">Description</string>
    <string name="route_submit_desc_desc">Write a brief description for your route</string>
    <string name="route_submit_button_submit">Submit Route</string>
    <string name="dialog_button_now">now</string>
    <string name="dialog_button_later">later</string>
    <string name="pref1">pref1</string>
    <string name="pref2">pref2</string>
    <string name="route_list_routes">Routes</string>
    <string name="route_list_my_routes">My Routes</string>
    <string name="friend_list_friends">Friends</string>
    <string name="friend_list_my_friend">My Friends</string>
    <string name="home_explore_seemore">Explore More</string>
    <string name="home_search_friends">Search for \nfriends</string>
    <string name="home_search_routes">Search for Routes</string>
    <string name="home_explore_map">Explore the map</string>
    <string name="dialog_button_unsaved_changes_title">Unsaved changes</string>
    <string name="dialog_button_unsaved_changes_desc">Changes have not been processed. Are you sure about going back?</string>
    <string name="dialog_button_myemail">Your email</string>
    <string name="add_marker_work">Marker added</string>
    <string name="remove_marker_work">Marker removed</string>
    <string name="search_friend_no_friends">No results found.</string>
    <string name="dialog_button_ok">ok</string>
    <string name="dialog_button_yes">yes</string>
    <string name="dialog_button_no">no</string>
    <string name="add_marker_title">Add marker</string>
    <string name="remove_marker_title">Remove marker</string>
    <string name="dialog_button_add">add</string>
    <string name="search">Search</string>
    <string name="add_marker_desc">Write about this marker</string>
    <string name="remove_marker_desc">Remove this marker?</string>
    <string name="search_friend_title">Search Friends</string>
    <string name="friend_add_yourself">Cannot add yourself</string>
    <string name="profile_add">Add</string>
    <string name="message_notif_sent">Request sent</string>
    <string name="friend_add_failed">Failed</string>
    <string name="notif_nothing">No Notifs</string>

    <string-array name="prefs">
        <item>@string/pref1</item>
        <item>@string/pref2</item>
    </string-array>
</resources>
