<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/dialog_add_marker_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/add_marker_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium"/>

    <TextView
        android:id="@+id/dialog_add_marker_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_marker_title"
        android:text="@string/add_marker_desc"
        android:textAlignment="textStart"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_place_input_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_marker_desc"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextInput"
        app:boxStrokeColor="@color/yellow_bg_light"
        app:hintEnabled="false"
        app:errorEnabled="false"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_place_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLength="600"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_small" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_add_place_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_place_input_layout"
        android:text="@string/dialog_button_add"
        android:textColor="@color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_add_place_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@+id/dialog_add_place_add_button"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_place_input_layout"
        android:text="@string/dialog_button_cancel"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>