<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ResetPWFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/black">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_regular"
            android:paddingEnd="@dimen/margin_regular">

            <ImageView
                android:id="@+id/forgot_pw_arrow_button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/margin_regular"
                android:contentDescription="@string/login_password_backarrow"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_back_arrow"/>

            <TextView
                android:id="@+id/forgot_password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_regular"
                android:layout_marginBottom="@dimen/margin_regular"
                android:text="@string/login_forgot_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_big"
                app:layout_constraintBottom_toTopOf="@id/forgot_password_info"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot_pw_arrow_button" />

            <ImageView
                android:id="@+id/forgot_password_image"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/forgot_password_title"
                app:layout_constraintTop_toTopOf="@id/forgot_password_title"
                android:layout_marginEnd="@dimen/margin_small"
                android:contentDescription="@string/login_forgot_image"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_email"/>

            <TextView
                android:id="@+id/forgot_password_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_title"
                app:layout_constraintBottom_toTopOf="@id/forgot_password_email_layout"
                android:layout_marginBottom="@dimen/margin_regular"


                android:text="@string/login_forgot_info"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgot_password_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/forgot_password_send_button"
                android:layout_marginBottom="@dimen/margin_regular"
                style="@style/TextInput"
                app:errorEnabled="false"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_password_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/l_gray"
                    android:drawableStart="@drawable/ic_account"
                    android:drawablePadding="@dimen/padding_small"
                    android:hint="@string/login_forgot_emailtext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_small" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_password_send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/forgot_password_back_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/margin_big"
                android:padding="@dimen/padding_small"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/login_forgot_send"
                android:textColor="@color/white"

                app:backgroundTint="@color/blue_active" />


            <TextView
                android:id="@+id/forgot_password_back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/margin_regular"

                android:textAlignment="center"
                android:text="@string/login_forgot_back"
                android:textColor="@color/blue_active"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/forgot_password_progressbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="invisible">
        <com.victor.loading.rotate.RotateLoading
            android:id="@+id/forgot_password_progressbar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:loading_width="4dp"
            app:loading_color="@color/white"
            android:layout_gravity="center"/>
    </FrameLayout>

</FrameLayout>