<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/fragment_signup"
    android:background="#000000"
    android:clickable="true">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_regular"
            android:paddingEnd="@dimen/margin_regular">

            <ImageView
                android:id="@+id/signup_arrow_button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/margin_regular"
                android:contentDescription="@string/login_signup_back_arrow"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_back_arrow"/>

            <TextView
                android:id="@+id/signup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_arrow_button"
                app:layout_constraintBottom_toTopOf="@id/signup_username_layout"
                android:layout_marginTop="@dimen/margin_regular"
                android:layout_marginBottom="@dimen/margin_regular"

                android:text="@string/login_signup_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_big"/>

            <ImageView
                android:id="@+id/signup_image"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/signup_title"
                app:layout_constraintTop_toTopOf="@id/signup_title"
                app:layout_constraintBottom_toBottomOf="@id/signup_title"
                android:layout_marginEnd="@dimen/margin_small"
                android:contentDescription="@string/login_signup_image"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/map"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_username_layout"
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@color/l_gray"
                app:errorEnabled="false"
                app:errorIconDrawable="@null"
                app:layout_constraintBottom_toTopOf="@id/signup_email_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="14"
                    android:background="@color/l_gray"
                    android:hint="@string/login_signup_username"
                    android:inputType="text"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_small" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email_layout"
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@color/l_gray"
                app:errorEnabled="false"
                app:errorIconDrawable="@null"
                app:layout_constraintBottom_toTopOf="@id/signup_password_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/l_gray"
                    android:hint="@string/login_signup_email"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_small" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password_layout"
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@color/l_gray"
                app:errorEnabled="false"
                app:errorIconDrawable="@null"
                app:layout_constraintBottom_toTopOf="@id/signup_repeat_password_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/l_gray"
                    android:hint="@string/login_signup_password"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_small" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_repeat_password_layout"
                style="@style/TextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_regular"
                android:background="@color/l_gray"
                app:errorEnabled="false"
                app:errorIconDrawable="@null"
                app:layout_constraintBottom_toTopOf="@id/signup_sign_up_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signup_repeat_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/l_gray"
                    android:hint="@string/login_signup_repeat_password"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_small" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/signup_OR_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/margin_big"
                android:padding="@dimen/padding_small"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/login_signup_sign_up"
                android:textColor="@color/white"
                app:backgroundTint="@color/blue_active" />

            <RelativeLayout
                android:id="@+id/signup_OR_separator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/signup_google_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/margin_regular"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/signup_OR_separator_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/login_textseperator"
                    android:textColor="@color/white"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_toStartOf="@id/signup_OR_separator_text"
                    android:background="@color/white"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_toEndOf="@id/signup_OR_separator_text"
                    android:background="@color/white"/>

            </RelativeLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/signup_google_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/signup_have_acc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/margin_regular"
                android:text="Google sign up"/>

            <RelativeLayout
                android:id="@+id/signup_have_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/margin_regular"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/signup_account_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_signup_account_q"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/signup_log_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/signup_account_question"
                    android:layout_marginStart="@dimen/margin_smaller"
                    android:text="@string/login_signup_account_log_in"
                    android:textColor="@color/blue_active"/>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/signup_progressbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="invisible">
        <com.victor.loading.rotate.RotateLoading
            android:id="@+id/signup_progressbar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:loading_width="4dp"
            app:loading_color="@color/white"
            android:layout_gravity="center"/>
    </FrameLayout>





</FrameLayout>
